--- a/index.html
+++ b/index.html
@@ -16,3 +16,7 @@ layout: default
 {% include publications.html %}
 
 {% include skills.html %}
+
+<a href="/cv.pdf" download>
+  <img src="cv.pdf" alt="Download PDF">
+</a>
