--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ layout: default
 
 {% include skills.html %}
 
-<a href="/cv.pdf" download>
+<a href="cv.pdf" download>
   <img src="cv.pdf" alt="Download PDF">
 </a>
